[package]
name = "ax_particles"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "4.0.2", features = ["log"] }
vulkanalia = { version = "=0.24.0", features = ["libloading", "provisional", "window"] }
winit = "0.30.4"